{
    "name": "PlayerMovement",
    "maps": [
        {
            "name": "PlayerMoves",
            "id": "762e3350-8fce-4d0c-af97-d41eb6ed411d",
            "actions": [
                {
                    "name": "PlayerControls",
                    "type": "PassThrough",
                    "id": "f27c0f57-0a9a-4ccf-af55-a42d76e0f17b",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "PlayerInput",
                    "id": "c61761ce-8c32-4a2f-bd7c-c46b98d4f54c",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerControls",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2cf7524e-6b8a-4d21-8f24-d389b3916319",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cd890957-1bf9-4394-ab05-ac42b8003daf",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1ef49099-1988-4a12-9728-5f8032fcbc93",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0336919e-69a2-4bdf-99d2-5708f7a4c9d4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "0cfe5017-fe90-4a7a-8b4a-179a5591ff4f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "2cbc16df-16f6-478c-a39f-7d79e764944c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}